# mdpack

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mdpack/: __init__.py  cli.py  frontmatter.py  registry.py  scanner.py  utils.py  walker.py  watcher.py
src/mdpack/converters/: __init__.py  _pandoc.py  base.py  csv_conv.py  docx_conv.py  pdf_conv.py  pptx_conv.py  xlsx_conv.py
tests/: test_cli.py  test_csv.py  test_docx.py  test_pdf.py  test_pptx.py  test_scanner.py  test_utils.py  test_watcher.py  test_xlsx.py
