[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdpack"
version = "0.0.1"
description = "Convert any directory of docs (DOCX, CSV, XLSX, PDF, PPTX, HTML) to clean Markdown."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andy Lei", email = "leimingcan@icloud.com"}
]
keywords = ["markdown", "converter", "docx", "pdf", "xlsx", "pptx", "rag", "llm"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
mdpack = "mdpack.cli:main"

[project.urls]
Homepage = "https://github.com/andyleimc-source/mdpack"
Issues = "https://github.com/andyleimc-source/mdpack/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mdpack"]

[tool.ruff]
line-length = 100
target-version = "py310"
