[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdpack"
version = "0.1.0"
description = "Convert any directory of docs (DOCX, CSV, XLSX) to clean Markdown."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andy Lei", email = "leimingcan@icloud.com"}
]
keywords = ["markdown", "converter", "docx", "xlsx", "csv", "rag", "llm", "pandoc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "build",
    "twine",
]

[project.scripts]
mdpack = "mdpack.cli:main"

[project.urls]
Homepage = "https://github.com/andyleimc-source/mdpack"
Issues = "https://github.com/andyleimc-source/mdpack/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mdpack"]

[tool.ruff]
line-length = 100
target-version = "py310"
