[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdpack"
version = "0.3.0"
description = "Convert any directory of docs (DOCX, PPTX, PDF, XLSX, CSV) to clean Markdown, with a watch mode that auto-syncs on change."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andy Lei", email = "leimingcan@icloud.com"}
]
keywords = ["markdown", "converter", "docx", "pptx", "pdf", "xlsx", "csv", "rag", "llm", "pandoc", "docling", "watch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "openpyxl>=3.1",
    "pathspec>=0.12",
    "python-pptx>=1.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
pdf = ["docling>=2.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "build",
    "twine",
]

[project.scripts]
mdpack = "mdpack.cli:main"

[project.urls]
Homepage = "https://github.com/andyleimc-source/mdpack"
Issues = "https://github.com/andyleimc-source/mdpack/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mdpack"]

[tool.ruff]
line-length = 100
target-version = "py310"
